--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 dj-database-url==0.4.1
 Django==1.11.1
+django-taggit==0.22.1
 gunicorn==19.6.0
+jsonfield==2.0.1
 psycopg2==2.6.2
+pytz==2017.2
 whitenoise==3.2
