--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dj-database-url==0.4.1
 Django==1.11.1
 django-taggit==0.22.1
+django-vote==2.1.4
 gunicorn==19.6.0
 jsonfield==2.0.1
 psycopg2==2.6.2
