--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
+beautifulsoup4==4.6.0
+certifi==2017.4.17
+chardet==3.0.4
 dj-database-url==0.4.1
 Django==1.11.1
 django-taggit==0.22.1
 django-vote==2.1.4
 gunicorn==19.6.0
+idna==2.5
 jsonfield==2.0.1
 psycopg2==2.6.2
+python-opengraph==0.0.2
 pytz==2017.2
+requests==2.18.1
+urllib3==1.21.1
 whitenoise==3.2
