--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.6.0
 certifi==2017.4.17
 chardet==3.0.4
+defusedxml==0.5.0
 dj-database-url==0.4.1
 Django==1.11.1
 django-taggit==0.22.1
@@ -8,9 +9,16 @@ django-vote==2.1.4
 gunicorn==19.6.0
 idna==2.5
 jsonfield==2.0.1
+oauthlib==2.0.2
 psycopg2==2.6.2
+PyJWT==1.5.0
 python-opengraph==0.0.2
+python3-openid==3.1.0
 pytz==2017.2
 requests==2.18.1
+requests-oauthlib==0.8.0
+six==1.10.0
+social-auth-app-django==1.2.0
+social-auth-core==1.4.0
 urllib3==1.21.1
 whitenoise==3.2
