--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.6.0
 certifi==2017.4.17
 chardet==3.0.4
+decorator==4.0.11
 defusedxml==0.5.0
 dj-database-url==0.4.1
 Django==1.11.1
@@ -8,17 +9,31 @@ django-taggit==0.22.1
 django-vote==2.1.4
 gunicorn==19.6.0
 idna==2.5
+ipython==6.1.0
+ipython-genutils==0.2.0
+jedi==0.10.2
 jsonfield==2.0.1
 oauthlib==2.0.2
+olefile==0.44
+pexpect==4.2.1
+pickleshare==0.7.4
+Pillow==4.1.1
+prompt-toolkit==1.0.14
 psycopg2==2.6.2
+ptyprocess==0.5.1
+Pygments==2.2.0
+pyimgur==0.6.0
 PyJWT==1.5.0
 python-opengraph==0.0.2
 python3-openid==3.1.0
 pytz==2017.2
 requests==2.18.1
 requests-oauthlib==0.8.0
+simplegeneric==0.8.1
 six==1.10.0
 social-auth-app-django==1.2.0
 social-auth-core==1.4.0
+traitlets==4.3.2
 urllib3==1.21.1
+wcwidth==0.1.7
 whitenoise==3.2
