--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ decorator==4.0.11
 defusedxml==0.5.0
 dj-database-url==0.4.1
 Django==1.11.1
+django-model-utils==3.0.0
+django-notifications-hq==1.3
 django-taggit==0.22.1
 django-vote==2.1.4
 gunicorn==19.6.0
