--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
 beautifulsoup4==4.6.0
 certifi==2017.4.17
 chardet==3.0.4
+cycler==0.10.0
 decorator==4.0.11
 defusedxml==0.5.0
 dj-database-url==0.4.1
 Django==1.11.1
 django-ajax-comments==1.1.0.dev1
+django-appconf==1.0.1
+django-classy-tags==0.8.0
 django-contrib-comments==1.8.0
 django-model-utils==3.0.0
 django-notifications-hq==1.3
 django-taggit==0.22.1
+django-taggit-templatetags2==1.6.1
 django-vote==2.1.4
 djangorestframework==3.6.3
 docutils==0.13.1
@@ -20,6 +24,8 @@ ipython==6.1.0
 ipython-genutils==0.2.0
 jedi==0.10.2
 jsonfield==2.0.1
+matplotlib==2.0.2
+numpy==1.13.0
 oauthlib==2.0.2
 olefile==0.44
 pexpect==4.2.1
@@ -31,6 +37,8 @@ ptyprocess==0.5.1
 Pygments==2.2.0
 pyimgur==0.6.0
 PyJWT==1.5.0
+pyparsing==2.2.0
+python-dateutil==2.6.0
 python-opengraph==0.0.2
 python3-openid==3.1.0
 pytz==2017.2
